2003-11-23  Per Bothner  <pbothner@apple.com>

	Note whether fragment was empty so we can update mi_valid.
	* cpphash.h (struct cpp_fragment):  New field empty.
	* cppfiles.c (read_file_guts):  Mark head fragment as empty.
	(_cpp_enter_fragment):  Clear mi_valid if reused fragment is non-empty
	Otherwise, set empty from mi_valid.
	(_cpp_exit_fragment):  Update empty and mi_valid fields.

2003-11-23  Per Bothner  <pbothner@apple.com>

	Support compile-server dependency tracking for macros.
	* c-opts.c (init_c_common_once):  Set uses_fragment callback.
	* cpplib.h (struct cpp_callbacks):  New uses_fragment field.
	* c-common.h (cb_uses_fragment):  New declaration.
	* c-common.c (cb_uses_fragment):  New function.
	* cpphash.h (struct cpp_macro):  New field defining_fragment.
	* cppmacro.c (enter_macro_context):  Call uses_fragment callback.
	(_cpp_create_definition):  Set defining_fragment field.
	
2003-11-23  Per Bothner  <pbothner@apple.com>

	* c-format.c (init_dynamic_diag_info):  An identifier may exist yet
	not have a global value, e.g. when the compiler sercer sees a new file.

2003-11-07  Per Bothner  <pbothner@apple.com>

	* c-opts.c (finish_options):  Move cpp_find_main_file earlier, so
	parse_in's main_file is set.

2003-11-07  Per Bothner  <pbothner@apple.com>

	* c-decl.c (duplicate_decls):  Don't modify olddecl.  Instead, merge
	olddecl's info into newdecl.
	(pushdecl):  Return (except for PARM_DECL) the new decl.
	(c_write_global_declarations):  Skip old declaration.

2003-11-07  Per Bothner  <pbothner@apple.com>

	* c-decl.c (start_struct):  Increment currently_nested.
	(finish_struct):  Decrement currently_nested.

2003-11-05  Per Bothner  <pbothner@apple.com>

	* c-common.c (create_builtins_fragment):  Copy name.

	* c-common.c (register_fragment_dependency):  Don't register
	dependency on builtins_c_fragment.

	* c-common.c (cb_enter_fragment):  Set input_location.
	Remove some bogus messages, and improve text for others.